# Csnake

snake/: CMakeLists.txt
snake/client/: client.c  input.c  input.h  render_text.c  render_text.h
snake/common/: config.h  game.c  game.h  ipc.c  ipc.h  world.c  world.h
snake/maps/: example.txt  example_big.txt
snake/server/: server.c
untitled1/: CMakeLists.txt
untitled1/client/: client.c  input.c
untitled1/common/: game.c  ipc.h  world.c  world.h
